fix autolist templates

--- a/shopmanager/templates/autolist/logs.html
+++ b/shopmanager/templates/autolist/logs.html
@@ -1,4 +1,4 @@
-{% extends "autolist_base.html" %}
+{% extends "autolist/base.html" %}
 
 {% block title%} 操作记录 {% endblock %}
 {% block navbar %}{% endblock %}
