--- a/shopmanager/templates/items/productitemspage.html
+++ b/shopmanager/templates/items/productitemspage.html
@@ -15,28 +15,28 @@
       <th>序号</th><th>商品图片</th><th>商品编码</th><th>卖家名称</th><th>出售标题</th><th>在售价格</th><th>数量</th><th>上架时间</th>
       <th>销售状态</th><th>销售编码</th><th>销售属性</th><th>数量</th><th>销售价格</th><th>销售状态</th>
   </tr>
-  {% for item in object %}
-  	{% if item.sku_list.sku %}
-  	{% with item.sku_list.sku|length as sku_len %}
-  	{% for sku in item.sku_list.sku %}
+  {% for item in object.items %}
+  	{% if item.skus.sku %}
+  	{% with item.skus.sku|length as sku_len %}
+  	{% for sku in item.skus.sku %}
   		<tr>
   		{% if forloop.first %}
   		<td rowspan="{{ sku_len }}">{{ forloop.parentloop.counter }}</td>
   		<td rowspan="{{ sku_len }}" ><img src="{{ item.pic_url }}" width="60px" heigth="60px"/></td>
-  		<td rowspan="{{ sku_len }}" class="item_info"><a href="#">{{ item.num_iid }}</a></td>
-  		<td rowspan="{{ sku_len }}" class="item_info"><a href="#">{{ item.user.nick }}</a></td>
-  		<td rowspan="{{ sku_len }}" class="item_info"><a href="#">{{ item.title }}</a></td>
+  		<td rowspan="{{ sku_len }}" class="click_title"><a href="#">{{ item.num_iid }}</a></td>
+  		<td rowspan="{{ sku_len }}" class="click_title"><a href="#">{{ item.user.nick }}</a></td>
+  		<td rowspan="{{ sku_len }}" class="click_title"><a href="#">{{ item.title }}</a></td>
   		<td rowspan="{{ sku_len }}">{{ item.price }}</td>
   		<td rowspan="{{ sku_len }}">{{ item.num }}</td>
   		<td rowspan="{{ sku_len }}">{{ item.list_time }}</td>
-  		<td rowspan="{{ sku_len }}">{% if item.approve_status == 'onsale' %}<a class="btn btn-small btn-info" style="display:block;"><i class="icon-ok"></i>在售</a>
+  		<td rowspan="{{ sku_len }}">{% if item.approve_status == 'onsale' %}<a class="btn btn-small btn-success" style="display:block;"><i class="icon-ok"></i>在售</a>
   			{% else %}<a class="btn btn-small btn-warning" style="display:block;"><i class="icon-move"></i>下架</a>{%endif%}</td>
   		{% endif %}
   		<td>{{ sku.outer_id }}</td>
   		<td>{{ sku.properties_name }}</td>
   		<td>{{ sku.quantity }}</td>
   		<td>{{ sku.price }}</td>
-  		<td rowspan="{{ item.sku_list|length }}">{% if sku.status == "normal" %}<a class="btn btn-small btn-info" style="display:block;"><i class="icon-ok"></i>在售</a>
+  		<td rowspan="{{ item.sku_list|length }}">{% if sku.status == "normal" %}<a class="btn btn-small btn-success" style="display:block;"><i class="icon-ok"></i>在售</a>
   			{% else %}<a class="btn btn-small btn-warning" style="display:block;"><i class="icon-move"></i>下架</a>{%endif%}</td>
   		</tr>
   	{% endfor %}
