--- a/shopmanager/templates/items/productitemspage.html
+++ b/shopmanager/templates/items/productitemspage.html
@@ -15,7 +15,7 @@
       <th>序号</th><th>商品图片</th><th>商品编码</th><th>卖家名称</th><th>出售标题</th><th>在售价格</th><th>数量</th><th>上架时间</th>
       <th>销售状态</th><th>销售编码</th><th>销售属性</th><th>数量</th><th>销售价格</th><th>销售状态</th>
   </tr>
-  {% for item in object.items %}
+  {% for item in object.itemobjs %}
   	{% if item.skus.sku %}
   	{% with item.skus.sku|length as sku_len %}
   	{% for sku in item.skus.sku %}
