fix items and sentry

--- a/shopmanager/templates/items/base.html
+++ b/shopmanager/templates/items/base.html
@@ -8,6 +8,6 @@
 
 
 {% block preload_script %}
-  <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}script/layer/layer.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}script/items.js" type="text/javascript"></script>
 {% endblock %}
