--- a/shopmanager/templates/items/itemstable.html
+++ b/shopmanager/templates/items/itemstable.html
@@ -2,12 +2,12 @@
 	<table cellspacing="0" cellpadding="0" border="0" class="table table-bordered table-striped table-condensed">
 		{% if object %}
 		<tr>
-		  <th>序号</th><th>商品图片</th><th>商品简称</th><th>商品数量</th><th>上架时间</th><th>销售状态</th><th>操作</th>
+		  <th>图片</th><th>店铺</th><th>简称</th><th>售价</th><th>数量</th><th>上架时间</th><th>销售状态</th><th>操作</th>
 		</tr>
 		{% endif %}
 		{% for item in object %}
 		<tr>
-			<td>{{ forloop.counter }}</td><td><img src="{{ item.pic_url }}" width="50px" heigth="50px" /></td><td class="info_title">{{ item.title }}</td>
+			<td><img src="{{ item.pic_url }}" width="50px" heigth="50px" /></td><td>{{ item.user.nick }}</td><td class="info_title"><a href="{{ item.detail_url }}" target="_blank">{{ item.title }}</a></td><td>{{ item.price }}</td>
 			<td>{{ item.num }}</td><td>{% with item.list_time|date:"w" as week %}{% if week == '0' %}周日{% else %}周{{ week }}{% endif %}{%  endwith %},{{ item.list_time|date:" H时i分 " }}</td>
 			<td>{% if item.approve_status == 'onsale' %}<a class="btn btn-small btn-success" style="display:block;"><i class="icon-ok"></i>在售</a>
 	  			{% else %}<a class="btn btn-small btn-warning" style="display:block;"><i class="icon-move"></i>下架</a>{%endif%}</td>
