--- a/shopmanager/templates/items/itemstable.html
+++ b/shopmanager/templates/items/itemstable.html
@@ -1,4 +1,4 @@
-<div id="layer_table">
+<div id="item_layer_table">
 	<table cellspacing="0" cellpadding="0" border="0" class="table table-bordered table-striped table-condensed">
 		{% if object %}
 		<tr>
