change tradepostsuccess.html and fix trade admin

--- a/shopmanager/templates/trades/tradepostsuccess.html
+++ b/shopmanager/templates/trades/tradepostsuccess.html
@@ -12,11 +12,12 @@
 		</div>
 		<div id="post-status" style="display:block;">
 		  <fieldset>
-		  	<legend>发货订单状态</legend>
+		  	<legend>发货订单状态(共{{ trades|length }}单)</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
 			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>付款日期</th><th>发货状态</th>
 			    </tr>
+			    <tr><td colspan="6">发货成功的订单</td></tr>
 			    {% for trade in trades %}
 			    {% if trade.sys_status == "WAIT_CHECK_BARCODE" %}
 			    <tr>
