add auditsuccess and mergesuccess template

--- a/shopmanager/templates/trades/tradepostsuccess.html
+++ b/shopmanager/templates/trades/tradepostsuccess.html
@@ -1,8 +1,8 @@
 {% extends "trades/base.html" %}
 
-{% block title%} 订单淘宝发货成功界面 {% endblock %}
+{% block title%} 订单淘宝同步发货 {% endblock %}
 
-{% block navbar %}<div style="margin-top:30px"></div>{% endblock %}
+{% block navbar %}<div style="margin-top:0px"></div>{% endblock %}
 
 {% block container %}
 <div class='list_top'>
