--- a/shopmanager/templates/trades/mergesuccess.html
+++ b/shopmanager/templates/trades/mergesuccess.html
@@ -11,7 +11,7 @@
 	<div>
 		<div style="display:block;">
 		  <fieldset>
-		  	<legend>{% if merge_status == True %}合并成功{% else %}合并失败{% endif %} </legend>
+		  	<legend>{% if merge_status %}合并成功{% else %}合并失败{% endif %} </legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
 			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>付款日期</th><th>主订单</th><th>问题编号</th>
@@ -23,8 +23,7 @@
 					<td>{{ trade.seller_nick }}</td>
 			    	<td>{{ trade.buyer_nick }}</td>
 			    	<td>{{ trade.pay_time|date:'Y-m-d H:i:s' }}</td>
-			    	<td>{{ trade.buyer_nick }}</td>
-			    	<td>{% if trade.has_merge == True %}
+			    	<td>{% if trade.has_merge %}
 			    	    <img src="/static/admin/img/admin/icon-yes.gif" alt="yes">
 			    	    {% else %}
 			    	    <img src="/static/admin/img/admin/icon-no.gif" alt="no">
