--- a/shopmanager/templates/trades/repullsuccess.html
+++ b/shopmanager/templates/trades/repullsuccess.html
@@ -6,17 +6,16 @@
 
 {% block container %}
 <div class='list_top'>
-	<div>{{ object.trades }}
+	<div>
 		<div style="display:block;">
 		  <fieldset>
-		  	<legend>审核订单状态(共{{ trades|length }}单)</legend>
+		  	<legend>重新下载订单状态</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
 			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>付款日期</th><th>审核状态</th><th>问题编号</th>
 			    </tr>
-			    <tr><td colspan="7">审核通过的订单</td></tr>
-			    {% for trade in trades %}
-			    {% if trade.sys_status == "WAIT_PREPARE_SEND" %}
+			    <tr><td colspan="7">下载成功的订单{{ success_trades|length }}</td></tr>
+			    {% for trade in success_trades %}
 			    <tr>
 			    	<td>{{ trade.id }}</td>
 					<td>{{ trade.tid }}</td>
@@ -26,11 +25,9 @@
 			    	<td><img src="/static/admin/img/admin/icon-yes.gif" alt="yes"></td>
 			    	<td>{{ trade.reason_code }}</td>
 			    </tr>
-			    {% endif %}
 			    {% endfor %}
-			    <tr><td colspan="7">审核未通过的订单</td></tr>
-			    {% for trade in trades %}
-			    {% if trade.sys_status != "WAIT_PREPARE_SEND" %}
+			    <tr><td colspan="7">下载失败的订单{{ fail_trades|length }}</td></tr>
+			    {% for trade in fail_trades %}
 			    <tr>
 			    	<td>{{ trade.id }}</td>
 					<td>{{ trade.tid }}</td>
@@ -40,7 +37,6 @@
 			    	<td><img src="/static/admin/img/admin/icon-no.gif" alt="no"></td>
 			    	<td>{{ trade.reason_code }}</td>
 			    </tr>
-			    {% endif %}
 			    {% endfor %}
 			  </table>
 		  </fieldset>
