fix trades models and notify task

--- a/shopmanager/templates/trades/tradepostsuccess.html
+++ b/shopmanager/templates/trades/tradepostsuccess.html
@@ -5,7 +5,7 @@
 {% block navbar %}<div style="margin-top:0px"></div>{% endblock %}
 
 {% block container %}
-<div class='list_top'>
+<div class='list_top' style='width:660px;'>
 	<div>
 		<div>
 			<button e_id="post-status" class="btn btn-small btn-success fold">收起</button>
