--- a/shopmanager/templates/admin/trades/submit_line.html
+++ b/shopmanager/templates/admin/trades/submit_line.html
@@ -1,10 +1,12 @@
 {% load i18n %}
 <div class="submit-row" {% if is_popup %}style="overflow: auto;"{% endif %}>
-{% if show_save_and_continue %}<input type="submit" value="{% trans '关闭' %}" class="default" name="_close" onclick="window.close();" {{ onclick_attrib }}/>{% endif %}
+{% if show_close %}<input type="button" value="{% trans '关闭' %}" class="default" name="_close" onclick="window.close();" {{ onclick_attrib }}/>{% endif %}
 {% if show_delete_link %}<p class="deletelink-box"><a href="delete/" class="deletelink">{% trans "删除" %}</a></p>{% endif %}
-{% if show_save_and_continue %}<input type="submit" value="{% trans '取消合并' %}" class="default" name="_split" {{ onclick_attrib }}/>{% endif %}
-{% if show_save_and_continue %}<input type="submit" value="{% trans '取消定时' %}" class="default" name="_unregular" {{ onclick_attrib }}/>{% endif %}
-{% if show_save_and_continue %}<input type="submit" value="{% trans '作废' %}" class="default" name="_invalid" {{ onclick_attrib }}/>{% endif %}
+{% if show_split %}<input type="submit" value="{% trans '取消合并' %}" class="default" name="_split" {{ onclick_attrib }}/>{% endif %}
+{% if show_uninvalid %}<input type="submit" value="{% trans '反作废' %}" class="default" name="_uninvalid" {{ onclick_attrib }}/>{% endif %}
+{% if show_invalid %}<input type="submit" value="{% trans '作废' %}" class="default" name="_invalid" {{ onclick_attrib }}/>{% endif %}
+{% if show_unregular %}<input type="submit" value="{% trans '取消定时' %}" class="default" name="_unregular" {{ onclick_attrib }}/>{% endif %}
+{% if show_save_and_regular %}<input type="submit" value="{% trans '定时提醒' %}" class="default" name="_regular" {{ onclick_attrib }}/>{% endif %}
 {% if show_save %}<input type="submit" value="{% trans '保存' %}" class="default" name="_save" {{ onclick_attrib }}/>{% endif %}
-{% if show_save_and_continue %}<input type="submit" value="{% trans '保存并审核' %}" class="default" name="_save_audit" {{ onclick_attrib }}/>{% endif %}
+{% if show_save_and_aduit %}<input type="submit" value="{% trans '保存并审核' %}" class="default" name="_save_audit" {{ onclick_attrib }}/>{% endif %}
 </div>
