--- a/shopmanager/templates/admin/base_site.html
+++ b/shopmanager/templates/admin/base_site.html
@@ -11,6 +11,13 @@
 .module h2, .module caption, .inline-group h2 { background:#ccc url(/media/img/admin/nav-bg.gif) bottom left repeat-x; color: #333940; }
 a.section:link, a.section:visited { color: #666666; }
 </style>
+<script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
+<script>goog.require('goog.dom');</script>
+<script>goog.require('goog.ui.Dialog');</script>
+<script>goog.require('goog.ui.TableSorter');</script>
+<script>goog.require('goog.net.XhrIo');</script>
+<script>goog.require('goog.net.IframeIo');</script>
+<script>goog.require('goog.net.Jsonp');</script>
 {% endblock %}
 
 {% block branding %}
@@ -18,3 +25,10 @@ a.section:link, a.section:visited { color: #666666; }
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
+
+{% block footer %}
+  
+  <script src="{{ STATIC_URL }}script/admin/checkorder.js" type="text/javascript"></script>
+  
+<div id="footer"></div>
+{% endblock %}
