--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -2,10 +2,10 @@
 {% with trade=object.trade  logistics=object.logistics %}
 <div class="row-fluid">
 <input type="hidden" id="id_check_trade" value="{{ trade.id }}"/>
-<div class="span3"><label style="color:#999;display:inline">订单号: </label>{{ trade.tid }}</div>
-<div class="span3"><label style="color:#999;display:inline">买家: </label>{{ trade.buyer_nick }}</div>
-<div class="span3"><label style="color:#999;display:inline">店铺: </label>{{ trade.seller_nick }}</div>
-<div class="span3"><label style="color:#999;display:inline">付款时间: </label>{{ trade.pay_time }}</div>
+<div style="margin:0px;display:inline-block;width:25%"><label style="color:#999;display:inline">订单号: </label>{{ trade.tid }}</div>
+<div style="margin:0px;display:inline-block;width:25%"><label style="color:#999;display:inline">买家: </label>{{ trade.buyer_nick }}</div>
+<div style="margin:0px;display:inline-block;width:20%"><label style="color:#999;display:inline">店铺: </label>{{ trade.seller_nick }}</div>
+<div style="margin:0px;display:inline-block;width:25%"><label style="color:#999;display:inline">付款时间: </label>{{ trade.pay_time }}</div>
 </div>
 <div class="row-fluid">
 <div class="alert alert-warning"><strong>买家留言: </strong>{{ trade.buyer_message }}</div>
@@ -28,14 +28,15 @@
 <div class="accordion-group">  
 <div class="accordion-heading"> 
 <div style="padding:2px 15px">
+<div class="row-fluid">  
+<div class="span4"><label style="color:#999;display:inline">收货人: </label>{{ trade.receiver_name }}</div>
+<div class="span3"><label style="color:#999;display:inline">手机: </label>{{ trade.receiver_mobile }}</div>
+<div class="span3"><label style="color:#999;display:inline">固话: </label>{{ trade.receiver_phone }}</div>
+</div>
 <div class="row-fluid">
-<div class="span7">
 <label style="color:#999;display:inline">收货人: </label>{{ trade.receiver_name }}
 <label style="color:#999;display:inline">地址: </label>
 {{ trade.receiver_state }},{{ trade.receiver_city }},{{ trade.receiver_district }},{{ trade.receiver_address }}</div>
-<div class="span5"><label style="color:#999;display:inline">手机: </label>{{ trade.receiver_mobile }}
-<label style="color:#999;display:inline">固话: </label>{{ trade.receiver_phone }}</div>
-</div>
 </div>
     <a class="accordion-toggle" style="padding:0px 15px" data-toggle="collapse" href="#collapseOne">修改地址››</a>  
 </div>
@@ -43,17 +44,18 @@
     <div class="accordion-inner">  
 <form class="form-inline" action="/trades/address/" method="POST">
 <div>
-<label style="color:#999;display:inline">新地址: </label>
-<input type="text" name="receiver_state" class="input-small" placeholder="省">
-<input type="text" name="receiver_city" class="input-small" placeholder="市">
-<input type="text" name="receiver_district" class="input-small" placeholder="区">
-<input type="text" name="receiver_address" style="width:310px" placeholder="详细地址">
-</div>
-<div style="margin-top:5px;margin-left:46px;width:630px">
-<input type="text" name="receiver_name" class="input-small" placeholder="收货人">
-<input type="text" name="receiver_mobile" class="input-small" placeholder="手机">
-<input type="text" name="receiver_phone" class="input-small" placeholder="固话">
+<label style="color:#999;display:inline">收货人: </label>
+<input type="text" class="input-small" placeholder="收货人">
+<input type="text" class="input-small" placeholder="手机">
+<input type="text" class="input-small" placeholder="固话">
 <input type="submit" class="btn btn-small" style="float:right" value="确定修改">
+</div>
+<div style="margin-top:5px">
+<label style="color:#999;display:inline">新地址: </label>
+<input type="text" class="input-small" placeholder="省">
+<input type="text" class="input-small" placeholder="市">
+<input type="text" class="input-small" placeholder="区">
+<input type="text" style="width:310px" placeholder="详细地址">
 </div>
 </form>
     </div>
